SERVER-38555 cappedTruncateAfter must not set oldest timestamp during startup recovery when enableMajorityReadConcern=false

(cherry picked from commit bb47520a6ba133d2413e72160556910db5298caf)