src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.h
@@ -282,6 +282,8 @@ public:
 
     static void appendGlobalStats(BSONObjBuilder& b);
 
+    Timestamp getOldestTimestamp() const;
+
     /**
      * Returns the data file path associated with an ident on disk. Returns boost::none if the data
      * file can not be found. This will attempt to locate a file even if the storage engine's own
