src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp
@@ -1793,10 +1793,12 @@ void WiredTigerRecordStore::cappedTruncateAfter(OperationContext* opCtx,
         Timestamp truncTs(lastKeptId.repr());
         LOG(logLevel) << "Rewinding oplog visibility point to " << truncTs << " after truncation.";
 
-        if (!serverGlobalParams.enableMajorityReadConcern) {
-            // If majority read concern is disabled, we must set the oldest timestamp along with the
-            // commit timestamp. Otherwise, the commit timestamp might be set behind the oldest
-            // timestamp.
+        if (!serverGlobalParams.enableMajorityReadConcern &&
+            _kvEngine->getOldestTimestamp() > truncTs) {
+            // If majority read concern is disabled, the oldest timestamp can be ahead of 'truncTs'.
+            // In that case, we must set the oldest timestamp along with the commit timestamp.
+            // Otherwise, the commit timestamp will be set behind the oldest timestamp, which is
+            // illegal.
             const bool force = true;
             _kvEngine->setOldestTimestamp(truncTs, force);
         } else {
